--- a/Visualizer/src/View/topology/TopologyViewer.fxml
+++ b/Visualizer/src/View/topology/TopologyViewer.fxml
@@ -4,15 +4,9 @@
 
 <?import com.lynden.gmapsfx.GoogleMapView?>
 <?import javafx.embed.swing.SwingNode?>
+<?import javafx.scene.image.ImageView?>
 <GridPane fx:id="rootPane" alignment="CENTER" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="View.topology.TopologyViewerController">
-    <!--maxHeight="-Infinity" maxWidth="-Infinity" -->
-    <!--   <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" fillWidth="false"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints vgrow="NEVER" fillHeight="false"/>
-    </rowConstraints>-->
-
+    <ImageView fx:id="backgroundView" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
     <GoogleMapView fx:id="mapView" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-    <SwingNode fx:id="graphStreamNode" GridPane.columnIndex="0" GridPane.rowIndex="0" mouseTransparent="true" />
+    <SwingNode fx:id="graphStreamNode" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
 </GridPane>
