--- a/Visualizer/src/View/simulation/SimulationMenu.fxml
+++ b/Visualizer/src/View/simulation/SimulationMenu.fxml
@@ -5,6 +5,10 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Label?>
+<?import View.IntegerTextField?>
+<?import javafx.scene.control.Button?>
 <Accordion xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.simulation.SimulationMenuController">
    <panes>
        <TitledPane text="Display">
@@ -32,6 +36,17 @@
                        <ListView fx:id="lstExportOptions" prefHeight="200.0" prefWidth="200.0" />
                    </children>
                </AnchorPane>
+           </content>
+       </TitledPane>
+       <TitledPane text="Settings">
+           <content>
+               <GridPane>
+                   <Label text="Min edge value " GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                   <IntegerTextField fx:id="minValueText" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                   <Label text="Max edge value " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                   <IntegerTextField fx:id="maxValueText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                   <Button text = "Save values" GridPane.halignment="CENTER" onAction="#saveMinMaxValues"  GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2"/>
+               </GridPane>
            </content>
        </TitledPane>
    </panes>
