--- a/Visualizer/src/View/simulation/SimulationMenu.fxml
+++ b/Visualizer/src/View/simulation/SimulationMenu.fxml
@@ -15,7 +15,7 @@
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="5000.0" prefWidth="260.0">
                     <GridPane>
                         <TextArea fx:id="txtNewVQ" prefHeight="80.0" prefWidth="260.0" wrapText="true" GridPane.rowIndex="0"/>
-                        <Button layoutX="177.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="83.0"
+                        <Button fx:id="btnAddNewVQ" layoutX="177.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="83.0"
                                 text="Add new VQ" onAction="#addNewVQ" GridPane.rowIndex="1"/>
                         <ListView fx:id="lstDisplayOptions" layoutY="81.0" prefHeight="5000.0" prefWidth="260.0" GridPane.rowIndex="2"/>
                     </GridPane>
