--- a/Visualizer/src/View/simulation/SimulationResult.fxml
+++ b/Visualizer/src/View/simulation/SimulationResult.fxml
@@ -17,7 +17,7 @@
    <top>
       <HBox fx:id="sliderBox" BorderPane.alignment="TOP_CENTER">
          <children>
-             <Slider fx:id="timeSlider" showTickLabels="true" showTickMarks="true" />
+             <Slider fx:id="timeSlider" prefHeight="38" showTickLabels="true" showTickMarks="true" />
              <Label fx:id="lblCurrentTime" text="0.0 ms" />
          </children>
       </HBox>
@@ -33,7 +33,7 @@
    <bottom>
        <HBox alignment="CENTER">
            <DoubleTextField fx:id="rate" maxWidth="50" promptText="Speed" />
-          <Button fx:id="play" defaultButton="true" mnemonicParsing="false" onAction="#btnAnimateInRealTimeClicked" prefWidth="50" text="Play" BorderPane.alignment="CENTER" />
+          <Button fx:id="play" defaultButton="true" mnemonicParsing="false" onAction="#btnAnimateInRealTimeClicked" prefWidth="50" prefHeight="25" text="Play" BorderPane.alignment="CENTER" />
            <Button mnemonicParsing="false" onAction="#btnStop" prefWidth="50" text="Stop" BorderPane.alignment="CENTER" />
        </HBox>
    </bottom>
