--- a/Visualizer/src/View/simulation/SimulationMenu.fxml
+++ b/Visualizer/src/View/simulation/SimulationMenu.fxml
@@ -2,22 +2,37 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
 <Accordion fx:id="root" prefWidth="260" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.simulation.SimulationMenuController">
    <panes>
        <TitledPane text="Display">
            <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="5000.0" prefWidth="260.0">
                     <GridPane>
-                        <TextArea fx:id="txtNewVQ" prefHeight="80.0" prefWidth="260.0" wrapText="true" GridPane.rowIndex="0"/>
-                        <Button fx:id="btnAddNewVQ" layoutX="177.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="83.0"
-                                text="Add new VQ" onAction="#addNewVQ" GridPane.rowIndex="1"/>
-                        <ListView fx:id="lstDisplayOptions" layoutY="81.0" prefHeight="5000.0" prefWidth="260.0" GridPane.rowIndex="2"/>
+                        <TextArea fx:id="txtNewVQ" prefHeight="80.0" prefWidth="260.0" wrapText="true" GridPane.rowIndex="0" />
+                  <ButtonBar GridPane.rowIndex="1">
+                     <buttons>
+                          <Button fx:id="btnAddNewVQ" defaultButton="true" mnemonicParsing="false" onAction="#addNewVQ" prefHeight="30.0" text="Add new VQ" ButtonBar.buttonData="LEFT" />
+                          <Button mnemonicParsing="false" onAction="#showVQHelp" prefHeight="30.0" text="VQ Help" ButtonBar.buttonData="HELP" GridPane.rowIndex="0" />
+                     </buttons>
+                  </ButtonBar>
+                        <ListView fx:id="lstDisplayOptions" layoutY="81.0" prefHeight="5000.0" prefWidth="260.0" GridPane.rowIndex="2" />
+                  <columnConstraints>
+                     <ColumnConstraints />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                  </rowConstraints>
                     </GridPane>
                </AnchorPane>
            </content>
