--- a/Visualizer/src/View/simulation/SimulationMenu.fxml
+++ b/Visualizer/src/View/simulation/SimulationMenu.fxml
@@ -13,10 +13,10 @@
 
 <Accordion fx:id="root" prefWidth="260" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.simulation.SimulationMenuController">
    <panes>
-       <TitledPane text="Display">
+       <TitledPane text="Display" fx:id="vqPane">
            <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="5000.0" prefWidth="260.0">
-                    <GridPane>
+                    <GridPane prefHeight="5000">
                         <TextArea fx:id="txtNewVQ" prefHeight="80.0" prefWidth="260.0" wrapText="true" GridPane.rowIndex="0" />
                   <ButtonBar GridPane.rowIndex="1">
                      <buttons>
@@ -37,11 +37,13 @@
                </AnchorPane>
            </content>
        </TitledPane>
-       <TitledPane text="Simulations">
+       <TitledPane text="Simulations" fx:id="simulationPane">
            <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="5000.0" prefWidth="260.0">
                    <children>
-                       <ListView fx:id="lstSimulationOptions" prefHeight="5000.0" prefWidth="260.0" />
+                       <GridPane fx:id="gridpane">
+                           <ListView fx:id="lstSimulationOptions" prefHeight="500.0" prefWidth="260.0" />
+                       </GridPane>
                    </children>
                </AnchorPane>
            </content>
