--- a/Visualizer/src/View/topology/TopologyGenerator.fxml
+++ b/Visualizer/src/View/topology/TopologyGenerator.fxml
@@ -56,8 +56,8 @@
                         <Button minWidth="100" onAction="#preview" text="Generate New Topology" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" />
                         <Button minWidth="100" onAction="#loadGPSLog" text="Load from GPS Log" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
                         <Button minWidth="100" onAction="#saveTopology" text="Save Static Topology" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="11"/>
-                        <Button minWidth="100" onAction="#loadTopology" text="Load Static Topology" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="12"/>
-
+                        <Button minWidth="100" onAction="#loadTopology" text="Load from Static Topology" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="12"/>
+                        <Button minWidth="100" onAction="#saveIncidenseMatrix" text="Save Incidence Matrix" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="13"/>
                         <padding><Insets bottom="10.0" /></padding>
                            <rowConstraints>
                               <RowConstraints />
