--- a/Visualizer/src/View/topology/TopologyViewer.fxml
+++ b/Visualizer/src/View/topology/TopologyViewer.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.*?>
-
 <?import javafx.embed.swing.SwingNode?>
-<?import javafx.scene.image.ImageView?>
+<?import View.ImageViewPane?>
+
 <StackPane fx:id="rootPane" alignment="CENTER" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="View.topology.TopologyViewerController">
-    <ImageView fx:id="backgroundView"/>
+    <ImageViewPane fx:id="backgroundView" />
     <SwingNode fx:id="graphStreamNode"/>
 </StackPane>
